    - config:
      - The option 'cupt::resolver::score::position-penalty' now defaults to
        -2 (was -20).
      - Adjusted default values of options
        'cupt::resolver::score::{new,removal,quality-adjustment}' for changes
        in the score calculation (see below).
      - New (and default from now on) option value 'auto' for the option
        'cupt::worker::defer-triggers'.
    - system/resolvers/native:
      - Use normalized version priority in score calculations.
      - If a solution to a problem is an "unsatisfied" element, partially
        stick all competing solution elements, not only preceding ones.
      - Skip a solution if some element to auto-remove cannot be removed
        due to being (partially) sticked. (Closes: #641473)
      - Removing automatically installed packages: if several automatically
        installed packages satisfy the relation, leave only first of them.
    - system/worker:
      - If the option 'cupt::worker::defer-triggers' is set to 'auto', check
        for recent enough version of dpkg (1.16.1).
    - cache:
      - 'getLocalizedDescriptions': use new 'Description-md5' binary version
        field if available.

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 05 Dec 2011 11:02:17 +0200

cupt (2.3.3) unstable; urgency=low

  * console:
    - 'tar-metadata': include also Cupt-specific configuration files.
  * lib:
    - system/worker:
      - Generating dpkg package sequence: fixed non-propagating low-level
        subactions to higher-level subgroups in some cases. This regression
        was introduced in 2.2.0~rc1. Thanks to Jonathan Nieder for the report.
        (Closes: #656566)
  * doc:
    - tutorial:
      - Explicitly documented what infrastructure Cupt uses.
  * debian:
    - libcupt2-0.postrm:
      - Remove '/var/lib/cupt' directory completely on 'purge'.
        (Closes: #656457)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 21 Jan 2012 12:43:56 +0200

cupt (2.3.2) unstable; urgency=low
