@@ -18,6 +18,7 @@ cupt (2.4.0~) UNRELEASED; urgency=low
         in the score calculation (see below).
       - New (and default from now on) option value 'auto' for the option
         'cupt::worker::defer-triggers'.
+      - New option 'cupt::console::actions-preview::show-versions'.
     - system/resolvers/native:
       - Use normalized version priority in score calculations.
       - If a solution to a problem is an "unsatisfied" element, partially
